--- a/Cpp进阶3/CMakeLists.txt
+++ b/Cpp进阶3/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Cpp3)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(Cpp3 main.cpp Circle.h Circle.cpp CircleRect.cpp CircleRect.h Graph.h Rect.h Rect.cpp
-        Circle.h Circle.h QueueV.h CPage.h CMotion.h)
+        Circle.h Circle.h QueueV.h CPage.h CMotion.h CppDocument.h)
